[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/retrochips/retrochips.tres" type="DynamicFont" id=1]
[ext_resource path="res://levels/upgrade_menu/upgrade_menu.gd" type="Script" id=2]

[node name="UpgradeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 85
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainContainer"]
margin_top = 270.0
margin_right = 1280.0
margin_bottom = 365.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "UPGRADE MENU"
align = 1
valign = 1

[node name="Upgrades" type="Control" parent="MainContainer"]
margin_top = 450.0
margin_right = 1280.0
margin_bottom = 600.0

[node name="InnerContainer" type="Control" parent="MainContainer/Upgrades"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -75.0
margin_right = 350.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton1" type="Button" parent="MainContainer/Upgrades/InnerContainer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -62.5
margin_right = 125.0
margin_bottom = 62.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton2" type="Button" parent="MainContainer/Upgrades/InnerContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -62.5
margin_right = 62.5
margin_bottom = 62.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButton3" type="Button" parent="MainContainer/Upgrades/InnerContainer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -62.5
margin_bottom = 62.5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainContainer/Upgrades/InnerContainer/UpgradeButton1" to="." method="_on_UpgradeButton1_pressed"]
[connection signal="pressed" from="MainContainer/Upgrades/InnerContainer/UpgradeButton2" to="." method="_on_UpgradeButton2_pressed"]
[connection signal="pressed" from="MainContainer/Upgrades/InnerContainer/UpgradeButton3" to="." method="_on_UpgradeButton3_pressed"]
